RESOLVED FIXED204928
[Cocoa] _WKInspector uses wrong WKWebView in -setDiagnosticLoggingDelegate:
https://bugs.webkit.org/show_bug.cgi?id=204928
Summary [Cocoa] _WKInspector uses wrong WKWebView in -setDiagnosticLoggingDelegate:
Blaze Burg
Reported 2019-12-05 16:14:31 PST
.
Attachments
Patch (2.62 KB, patch)
2019-12-05 16:41 PST, Blaze Burg
no flags
Blaze Burg
Comment 1 2019-12-05 16:41:08 PST
WebKit Commit Bot
Comment 2 2019-12-05 17:12:22 PST
Comment on attachment 384978 [details] Patch Clearing flags on attachment: 384978 Committed r253189: <https://trac.webkit.org/changeset/253189>
WebKit Commit Bot
Comment 3 2019-12-05 17:12:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-05 17:13:24 PST
Note You need to log in before you can comment on or make changes to this bug.