[Cocoa] _WKInspector uses wrong WKWebView in -setDiagnosticLoggingDelegate: https://bugs.webkit.org/show_bug.cgi?id=204928

Reviewed by Timothy Hatcher.

I feel like I've made this mistake before. To make the right thing more obvious,
add a property named inspectorWebView that returns the Inspector WKWebView.

* UIProcess/API/Cocoa/_WKInspector.mm:
(-[_WKInspector inspectorWebView]):
(-[_WKInspector _setDiagnosticLoggingDelegate:]):
* UIProcess/WebInspectorProxy.h:
(WebKit::WebInspectorProxy::inspectorPage const):


Canonical link: https://commits.webkit.org/218144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253189 268f45cc-cd09-0410-ab3c-d52691b4dbfc